--- a/index.html
+++ b/index.html
@@ -1,401 +1,116 @@
-<!DOCTYPE html>
-
-<html class="no-js" lang="ja">
-
+<!doctype html>
+<html lang="en" class="no-js">
 <head>
-    <meta charset="utf-8">
-    <title>PoliPoli</title>
-    <meta name="description" content="">
-    <meta name="author" content="">
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+	<link href='https://fonts.googleapis.com/css?family=Droid+Serif|Open+Sans:400,700' rel='stylesheet' type='text/css'>
 
-    <link rel="stylesheet" href="css/base.css">
-    <link rel="stylesheet" href="css/vendor.css">
-    <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="icomoon.css">
-
-    <script src="js/modernizr.js"></script>
-    <script src="js/pace.min.js"></script>
-
-
+	<link rel="stylesheet" href="css/reset.css"> <!-- CSS reset -->
+	<link rel="stylesheet" href="css/style.css"> <!-- Resource style -->
+	<link rel="stylesheet" href="css/demo.css"> <!-- Demo style -->
+  	
+	<title>Responsive Vertical Timeline</title>
 </head>
-
-<body id="top">
-
-    <header class="main-header">
-
-        <div class="logo">
-            <a href="index.html">PoliPoli</a>
-        </div>
-
-        <a class="menu-toggle" href="#"><span>Menu</span></a>
-
-    </header>
-
-    <nav id="menu-nav-wrap">
-
-        <h3>PoliPoli Inc.</h3>
-        <ul class="nav-list">
-            <li><a class="smoothscroll" href="#intro" title="">TOP</a></li>
-            <li><a class="smoothscroll" href="#features" title="">ABOUT</a></li>
-            <li><a class="smoothscroll" href="#infos" title="">PRODUCTS</a></li>
-            <li><a class="smoothscroll" href="#testimonials" title="">MEMBER</a></li>
-
-        </ul>
-
-
-
-    </nav>
-    <div id="main-content-wrap">
-
-        <section id="intro" class="colorfilter-base">
-
-            <div class="row intro-content">
-                <div class="col-twelve">
-
-                    <!--h3 class="animate-intro"></h3>
-
-                    <h1 class="animate-intro"></h1-->
-
-                    <div class="buttons">
-                    </div>
-
-                    <img src="images/polipoli.png" alt="" class="animate-intro">
-
-                </div>
-                <!-- /twelve -->
-            </div>
-            <!-- /row -->
-
-        </section>
-
-
-        <!-- /intro -->
-
-
-        <!-- features
-   	================================================== -->
-        <section id="features">
-
-            <div class="row section-intro group animate-this">
-                <div class="col-twelve with-bottom-line">
-
-                    <h2 class="" style="color: red">Mission</h2>
-
-                    <h3>『テクノロジーで国家システムを再構築する』 </h3>
-                    <p class="lead">我々は抽象的な議論でなくテクノロジーこそが国家システムを前進できると信じ 日本初のPolitech (Politics × IT) スタートアップ企業として挑戦します。</p>
-
-                </div>
-            </div>
-            <br><br>
-            <div class="row section-intro group animate-this">
-                <div class="col-twelve with-bottom-line">
-
-                    <h2 class="" style="color: red">Vision</h2>
-
-                    <h3>『先駆者であり続ける』</h3>
-                    <p class="lead">最新のテクノロジーをサービスに実装し、その恩恵を社会に届けます。</p>
-
-                </div>
-            </div>
-            <br><br>
-            <div class="row section-intro group animate-this">
-                <div class="col-twelve with-bottom-line">
-
-                    <h2 class="" style="color: red">Value</h2>
-                    <br>
-                    <div class="row features-wrap">
-
-                        <div class="features-list block-1-3 block-s-1-2 block-tab-full">
-
-                            <div class="bgrid feature animate-this">
-
-                                <!--span class="feature-count">01.</span-->
-
-                                <div class="feature-content">
-
-                                    <h3 style="text-align: center">透明性</h3>
-                                    <img src="images/icon1.png">
-                                    <p>会社内・外への情報公開を徹底します。
-                                    </p>
-
-                                </div>
-
-                            </div>
-                            <!-- /bgrid -->
-
-                            <div class="bgrid feature animate-this">
-
-                                <!--span class="feature-count">02.</span-->
-
-                                <div class="feature-content">
-
-                                    <h3 style="text-align: center">幸福度</h3>
-                                    <img src="images/icon2.png">
-
-                                    <p>関係者すべての幸福度を最大化するように活動します。
-                                    </p>
-
-                                </div>
-
-                            </div>
-                            <!-- /bgrid -->
-
-                            <div class="bgrid feature animate-this">
-
-                                <!--span class="feature-count">03.</span-->
-
-                                <div class="feature-content">
-
-                                    <h3 style="text-align: center">遊び心</h3>
-                                    <img src="images/icon3.png">
-
-                                    <p>常にユーモアを持ち、自由な発想でサービスを作ります。
-                                    </p>
-
-                                </div>
-
-                            </div>
-                            <!-- /bgrid -->
-
-                            <!-- /bgrid -->
-
-                        </div>
-                        <!-- /features-list -->
-
-                    </div>
-                    <p class="lead"></p>
-
-                </div>
-            </div>
-
-
-
-        </section>
-
-
-
-        <!-- /features -->
-
-
-
-        <!-- /features -->
-
-
-        <!-- infos
-   	================================================== -->
-        <section id="infos">
-
-            <div class="info-entry">
-
-                <div class="half-grey"></div>
-
-                <div class="row info-entry-content">
-
-                    <div class="media-wrap">
-                        <div class="media animate-this" data-animate="fadeInRight">
-                            <img src="images/app.jpg">
-                        </div>
-                    </div>
-
-                    <div class="col-six text-part">
-
-                        <h5 class="animate-this" data-animate="fadeInLeft">PoliPoli</h5>
-                        <h2 class="animate-this" data-animate="fadeInLeft">『ポリポリ』</h2>
-
-                        <p class="animate-this" data-animate="fadeInLeft">『ポリポリ』は政治というイノベーションが遅れている分野を「エンターテイン」することで、イノベーションを起こします。
-                            <br><br><strong>トークンエコノミー</strong>を用いて経済圏を作り出すことで、政治家と有権者双方のニーズを満たすために立ち上がったプラットフォームプロジェクトです。</p>
-
-                        <a href="https://drive.google.com/file/d/1bcZwfdmxzAEqR8T3ERDrZxreUmFKC2t7/view" class="button animate-this" data-animate="fadeInLeft">企画書はこちら</a>
-
-                    </div>
-
-                </div>
-                <!-- /info-entry-content -->
-
-            </div>
-            <!-- /info-entry -->
-
-            <!--div class="info-entry">
-
-                <div class="half-grey"></div>
-
-                <div class="row info-entry-content">
-
-                    <div class="media-wrap">
-                        <div class="media animate-this" data-animate="fadeInLeft">
-                            <img src="images/virtualpay.png">
-                        </div>
-                    </div>
-
-                    <div class="col-six text-part">
-
-                        <h5 class="animate-this" data-animate="fadeInRight">VIRTUAL PAY</h5>
-                        <h2 class="animate-this" data-animate="fadeInRight">VIRTUAL PAY</h2>
-
-                        <p class="animate-this" data-animate="fadeInRight">NEM/XEM（ネム/ゼム）をはじめとした仮想通貨決済でオリジナル請求書が表示できる「Virtual Pay」。<br><br> 簡単にお店のオリジナルQRコードを表示できます。
-                        </p>
-
-                        <a href="#" class="button animate-this" data-animate="fadeInRight">Virtual Payを使ってみる</a>
-
-                    </div>
-
-                </div>
-        
-
-            </div-->
-
-
-        </section>
-        <!-- infos -->
-
-
-
-        <!-- testimonials
-   	================================================== -->
-        <section id="testimonials">
-            <div class="row testimonial-content">
-                <div class="col-twelve">
-
-                    <h2 class="h01 animate-this" style="color: red;">
-                        Member
-                    </h2>
-
-                    <div id="testimonial-slider" class="flexslider animate-this">
-                        <ul class="slides">
-                            <li>
-                                <p>伊藤 和真
-                                </p>
-                                <p class="author-info"><strong>CEO&amp;CMO</strong><br>F Ventures東京アソシエイト<br>iOSエンジニア<br>元政治家事務所広報責任者<br>慶應大学在学中<br><br><a href="https://twitter.com/kazuma12222"><span class="icon-twitter"></span></a></p>
-                            </li>
-                            <li>
-                                <p>倉田 隆成</p>
-                                <p class="author-info"><strong>COO&amp;CTO</strong><br>エンジニア(Ruby,PHP)<br>トークン設計者<br>法務担当<br>慶應大学在学中<br><br><a href="https://twitter.com/amnosmusic13"><span class="icon-twitter"></span></a>
-
-                                </p>
-                            </li>
-                            <li>
-                                <p>山田 仁太</p>
-                                <p class="author-info"><strong>CDO</strong><br>Web UI/UXデザイナー<br>フロントエンジニア(Swift)<br>Web Marketing<br>慶應大学在学中<br><br><a href="https://twitter.com/Leo___1213"><span class="icon-twitter"></span>
-                                    </a>
-                                </p>
-                            </li>
-                            <li>
-                                <p>千葉 大志</p>
-                                <p class="author-info"><strong>技術顧問</strong><br>SNS, CtoCなど様々なアプリ開発に携わる<br>iOSDCなどのカンファレンスに登壇<br><br><a href="https://github.com/bati668/resume"><span class="icon-github"></span>
-</a>
-                                </p>
-                            </li>
-                            <li>
-                                <p>木村 優</p>
-                                <p class="author-info">BlockChain技術顧問<br>LCNEM CEO兼CTO<br>自身のブログのBlock Chainについての<br>経済学的な観点でのコンテンツなどに定評あり<br>京都大学経済学部在学<br><br><a href="https://twitter.com/YuKimura45z"><span class="icon-twitter"></span></a>
-
-                                </p>
-                            </li>
-                            <li>
-                                <p>法律事務所 Zelo</p>
-                                <p class="author-info">顧問弁護士<br>PoliPoliは、最新のテクノロジーにも強い<br>法律事務所様と相談して法律面からの<br>万全な準備を整えております。<br><br>ホームページは<a href="http://zelojapan.com/">こちら</a>
-
-                                </p>
-                            </li>
-                            <li>
-                                <p>さまざまな方たち</p>
-                                <p class="author-info">PoliPoliアンバサダー<br>ポリポリの理念に共感し、さまざまな協力をして下さる人たちと<br>共に活動しております。<br>アンバサダーは随時募集しております。<br><br>アンバサダーに興味ある方は<a href="https://twitter.com/polipoli_vote">こちら</a>
-
-                                </p>
-                            </li>
-                        </ul>
-                    </div>
-
-                    <div class="flexslider-controls animate-this">
-                        <ul class="flex-control-nav">
-                            <li><img src="images/ito.png" alt=""></li>
-                            <li><img src="images/kurata.png" alt=""></li>
-                            <li><img src="images/yamada.png" alt=""></li>
-                            <li><img src="images/tiba.png" alt=""></li>
-                            <li><img src="images/kimura.png" alt=""></li>
-                            <li><img src="images/zelo.png" alt=""></li>
-                            <li><img src="images/ambassador.png" alt=""></li>
-                        </ul>
-                    </div>
-
-                </div>
-            </div>
-
-
-        </section>
-        <!-- /testimonials -->
-
-
-
-
-
-
-    </div>
-    <!-- /main-content-wrap -->
-    <hr>
-    <!-- footer
-	================================================== -->
-    <footer id="main-footer ">
-
-
-
-        <div class="footer-info-wrap ">
-
-            <div class="row footer-info ">
-
-                <div class="col-four tab-full ">
-                    <h4>Corporate Profile</h4>
-
-                    <p>会社名<br>株式会社PoliPoli<br> <br>代表者<br>伊藤 和真<br>
-                        <br>設立<br>2018年2月<br>
-                        <br>事業内容<br>ソフトウェア開発</p>
-                </div>
-
-                <div class="col-four tab-full collapse ">
-                    <h4>Contact</h4>
-                    <p><a href="mailto:info.polipoli@gmail.com"><span class="icon-mail"></span> メール</a><br><br><a href="#"><span class="icon-twitter"></span> Twitter</a>
-                        <br><br><span class="icon-facebook"></span> Facebook<br><br><span class="icon-file-text2"></span> お問い合わせ
-                    </p>
-                </div>
-
-                <div class="col-four tab-full collapse ">
-                    <h4>News</h4>
-                    <p> 2018/05/01<br>テスト版リリース<br>
-                        <br>2018/02/17<br>登記完了</p>
-                </div>
-
-
-            </div>
-        </div>
-
-        <!-- /footer-info-wrap -->
-
-        <div class="footer-bottom ">
-
-            <div class="copyright ">
-                <span>&copy; 2018 PoliPoli Inc.</span>
-                <span>Design by <a href="https://twitter.com/yoshi1125hisa">yoshi.</a></span>
-            </div>
-        </div>
-
-    </footer>
-
-
-
-    <!-- preloader
-   ================================================== -->
-    <div id="preloader ">
-        <div id="loader "></div>
-    </div>
-
-    <!-- Java Script
-   ================================================== -->
-    <script src="js/jquery-2.1.3.min.js "></script>
-    <script src="js/plugins.js "></script>
-    <script src="js/main.js "></script>
-
+<body>
+	<header>
+		<div class="cd-nugget-info">
+			<a href="https://codyhouse.co/gem/vertical-timeline/">
+				<span>
+					<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="16px" height="16px" viewBox="0 0 16 16" style="enable-background:new 0 0 16 16;" xml:space="preserve">
+						<style type="text/css">
+							.cd-nugget-info-arrow{fill:#383838;}
+						</style>
+						<polygon class="cd-nugget-info-arrow" points="15,7 4.4,7 8.4,3 7,1.6 0.6,8 0.6,8 0.6,8 7,14.4 8.4,13 4.4,9 15,9 "/>
+					</svg>
+				</span>
+				Article &amp; Download
+			</a>
+		</div> <!-- cd-nugget-info -->
+		<h1>Responsive Vertical Timeline</h1>
+	</header>
+
+	<section class="cd-timeline js-cd-timeline">
+		<div class="cd-timeline__container">
+			<div class="cd-timeline__block js-cd-block">
+				<div class="cd-timeline__img cd-timeline__img--picture js-cd-img">
+					<img src="img/cd-icon-picture.svg" alt="Picture">
+				</div> <!-- cd-timeline__img -->
+
+				<div class="cd-timeline__content js-cd-content">
+					<h2>Title of section 1</h2>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio, dolorum provident rerum aut hic quasi placeat iure tempora laudantium ipsa ad debitis unde? Iste voluptatibus minus veritatis qui ut.</p>
+					<a href="#0" class="cd-timeline__read-more">Read more</a>
+					<span class="cd-timeline__date">Jan 14</span>
+				</div> <!-- cd-timeline__content -->
+			</div> <!-- cd-timeline__block -->
+
+			<div class="cd-timeline__block js-cd-block">
+				<div class="cd-timeline__img cd-timeline__img--movie js-cd-img">
+					<img src="img/cd-icon-movie.svg" alt="Movie">
+				</div> <!-- cd-timeline__img -->
+
+				<div class="cd-timeline__content js-cd-content">
+					<h2>Title of section 2</h2>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio, dolorum provident rerum aut hic quasi placeat iure tempora laudantium ipsa ad debitis unde?</p>
+					<a href="#0" class="cd-timeline__read-more">Read more</a>
+					<span class="cd-timeline__date">Jan 18</span>
+				</div> <!-- cd-timeline__content -->
+			</div> <!-- cd-timeline__block -->
+
+			<div class="cd-timeline__block js-cd-block">
+				<div class="cd-timeline__img cd-timeline__img--picture js-cd-img">
+					<img src="img/cd-icon-picture.svg" alt="Picture">
+				</div> <!-- cd-timeline__img -->
+
+				<div class="cd-timeline__content js-cd-content">
+					<h2>Title of section 3</h2>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi, obcaecati, quisquam id molestias eaque asperiores voluptatibus cupiditate error assumenda delectus odit similique earum voluptatem doloremque dolorem ipsam quae rerum quis. Odit, itaque, deserunt corporis vero ipsum nisi eius odio natus ullam provident pariatur temporibus quia eos repellat consequuntur perferendis enim amet quae quasi repudiandae sed quod veniam dolore possimus rem voluptatum eveniet eligendi quis fugiat aliquam sunt similique aut adipisci.</p>
+					<a href="#0" class="cd-timeline__read-more">Read more</a>
+					<span class="cd-timeline__date">Jan 24</span>
+				</div> <!-- cd-timeline__content -->
+			</div> <!-- cd-timeline__block -->
+
+			<div class="cd-timeline__block js-cd-block">
+				<div class="cd-timeline__img cd-timeline__img--location js-cd-img">
+					<img src="img/cd-icon-location.svg" alt="Location">
+				</div> <!-- cd-timeline__img -->
+
+				<div class="cd-timeline__content js-cd-content">
+					<h2>Title of section 4</h2>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio, dolorum provident rerum aut hic quasi placeat iure tempora laudantium ipsa ad debitis unde? Iste voluptatibus minus veritatis qui ut.</p>
+					<a href="#0" class="cd-timeline__read-more">Read more</a>
+					<span class="cd-timeline__date">Feb 14</span>
+				</div> <!-- cd-timeline__content -->
+			</div> <!-- cd-timeline__block -->
+
+			<div class="cd-timeline__block js-cd-block">
+				<div class="cd-timeline__img cd-timeline__img--location js-cd-img">
+					<img src="img/cd-icon-location.svg" alt="Location">
+				</div> <!-- cd-timeline__img -->
+
+				<div class="cd-timeline__content js-cd-content">
+					<h2>Title of section 5</h2>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio, dolorum provident rerum.</p>
+					<a href="#0" class="cd-timeline__read-more">Read more</a>
+					<span class="cd-timeline__date">Feb 18</span>
+				</div> <!-- cd-timeline__content -->
+			</div> <!-- cd-timeline__block -->
+
+			<div class="cd-timeline__block js-cd-block">
+				<div class="cd-timeline__img cd-timeline__img--movie js-cd-img">
+					<img src="img/cd-icon-movie.svg" alt="Movie">
+				</div> <!-- cd-timeline__img -->
+
+				<div class="cd-timeline__content js-cd-content">
+					<h2>Final Section</h2>
+					<p>This is the content of the last section</p>
+					<span class="cd-timeline__date">Feb 26</span>
+				</div> <!-- cd-timeline__content -->
+			</div> <!-- cd-timeline__block -->
+		</div>
+	</section> <!-- cd-timeline -->
+	
+<script src="js/main.js"></script> <!-- Resource JavaScript -->
 </body>
-
 </html>
